# delivery-manager

./: README.md
delivery-manager_desktop/: DEPLOYMENT_README.md  README.md  run_app.sh
delivery-manager_desktop/tonalivery/: database.py  main.py  main_mod.py
delivery-manager_movile/: .env.example  last_sync.json  pending_operations.json  pyproject.toml  run_app_web.sh  sync_state.json
delivery-manager_movile/tonalivery/: database.py  database_mobile_simplified.py  main.py  sync_queue.py  sync_service.py
middleware/: .env  Dockerfile  __init__.py  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
